fix: teams page overflow

--- a/src/pages/Teams/Teams.module.css
+++ b/src/pages/Teams/Teams.module.css
@@ -1,10 +1,9 @@
 .container {
   background: linear-gradient(90deg, #272626 22%, #25424a 68%, #37616c 84%);
-  min-width: 100vw;
-  min-height: 100vh;
+  min-width: 100%;
   margin: 0;
-  padding: rem(15px) calc(var(--mantine-spacing-xl) * 1) rem(100px)
-    calc(var(--mantine-spacing-xl) * 1);
+  padding: rem(15px) calc(var(--mantine-spacing-lg) * 1) rem(100px)
+    calc(var(--mantine-spacing-lg) * 1);
 }
 
 .heading {
@@ -23,8 +22,8 @@
 }
 
 .memberCard {
-  height: rem(265px);
-  width: rem(290px);
+  height: rem(260px);
+  width: rem(300px);
   padding: var(--mantine-spacing-md);
   border-radius: var(--mantine-radius-md);
   background-color: rgba(40, 40, 40, 1);
